[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/playjam_logo_v2.jpg" type="Texture" id=1]
[ext_resource path="res://assets/res/global_theme.tres" type="Theme" id=2]
[ext_resource path="res://scenes/Main.gd" type="Script" id=3]
[ext_resource path="res://assets/res/fonts/font_title_48px.tres" type="DynamicFont" id=4]
[ext_resource path="res://scenes/LetterInput/LetterInput.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 152, 270 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "game_list_expand"
tracks/0/type = "value"
tracks/0/path = NodePath("PressStartContainer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerDataContainer/VBoxContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/CCPlayerName:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/CCPlayerName:mouse_filter")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("MarginContainer:rect_size")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 270 ), Vector2( 152, 270 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("MarginContainer/SidePanelControl:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.784314 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("MarginContainer/SidePanelControl:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
resource_name = "intro"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PressStartContainer/LabelPressStart:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PressStartContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MarginContainer/SidePanelControl:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/CCPlayerName:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CanvasLayer/PopUpControl:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("PressStartContainer:mouse_filter")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("PlayerDataContainer/VBoxContainer:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="BackgroundTexture" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="BackgroundColor" type="ColorRect" parent="BackgroundTexture"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.027451, 0.0117647, 0.14902, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="GameThumbnail" type="TextureRect" parent="."]
anchor_left = 0.416667
anchor_top = 0.207407
anchor_right = 0.916667
anchor_bottom = 0.954073
mouse_filter = 2
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 0.316667
anchor_bottom = 1.0
margin_right = 152.0
margin_bottom = 270.0
custom_constants/margin_right = 0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="SidePanelControl" type="Panel" parent="MarginContainer"]
modulate = Color( 1, 1, 1, 0.784314 )
margin_right = 304.0
margin_bottom = 540.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/SidePanelControl"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ItemList" type="ItemList" parent="MarginContainer/SidePanelControl/MarginContainer"]
margin_right = 304.0
margin_bottom = 540.0
same_column_width = true

[node name="PressStartContainer" type="CenterContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LabelPressStart" type="Label" parent="PressStartContainer"]
margin_left = 71.0
margin_top = 126.0
margin_right = 409.0
margin_bottom = 143.0
custom_fonts/font = ExtResource( 4 )
text = "PRESS ANY BUTTON TO BEGIN!"
align = 1
valign = 1

[node name="PlayerDataContainer" type="MarginContainer" parent="."]
anchor_left = 0.8
anchor_right = 1.0
anchor_bottom = 0.237037
custom_constants/margin_right = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 6
custom_constants/margin_bottom = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerDataContainer"]
margin_left = 6.0
margin_top = 2.0
margin_right = 94.0
margin_bottom = 61.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="LabelPlayerName" type="Label" parent="PlayerDataContainer/VBoxContainer"]
margin_top = 17.0
margin_right = 88.0
margin_bottom = 27.0
text = "AAA"
align = 3
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="LabelPlayerLives" type="Label" parent="PlayerDataContainer/VBoxContainer"]
margin_top = 31.0
margin_right = 88.0
margin_bottom = 41.0
text = "VIDAS: 0"
align = 3
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "intro"
anims/RESET = SubResource( 4 )
anims/game_list_expand = SubResource( 3 )
anims/intro = SubResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="PopUpControl" type="Control" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="AcceptDialog" type="AcceptDialog" parent="CanvasLayer/PopUpControl"]
anchor_left = 0.329102
anchor_top = 0.34
anchor_right = 0.670898
anchor_bottom = 0.66
margin_bottom = -3.05176e-05
rect_min_size = Vector2( 350, 192 )
theme = ExtResource( 2 )
popup_exclusive = true
window_title = "Aviso!"
dialog_text = "Este es un texto de prueba para ver como se ven los dialogos con muchos caracteres. Parece que se ve bien y bonito asi que vamos a dejarlo asi y no tocar nada."
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CCPlayerName" type="CenterContainer" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 2 )

[node name="VBox" type="VBoxContainer" parent="CanvasLayer/CCPlayerName"]
margin_left = 184.0
margin_top = 116.0
margin_right = 296.0
margin_bottom = 154.0
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/CCPlayerName/VBox"]
margin_right = 208.0
margin_bottom = 17.0
text = "INGRESA TU APODO"
align = 1

[node name="CC" type="CenterContainer" parent="CanvasLayer/CCPlayerName/VBox"]
margin_top = 21.0
margin_right = 208.0
margin_bottom = 59.0

[node name="GC" type="GridContainer" parent="CanvasLayer/CCPlayerName/VBox/CC"]
margin_left = 89.0
margin_top = 7.0
margin_right = 118.0
margin_bottom = 31.0
columns = 3

[node name="LetterInput1" parent="CanvasLayer/CCPlayerName/VBox/CC/GC" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 13.0
margin_bottom = 38.0

[node name="LetterInput2" parent="CanvasLayer/CCPlayerName/VBox/CC/GC" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 17.0
margin_right = 30.0
margin_bottom = 38.0

[node name="LetterInput3" parent="CanvasLayer/CCPlayerName/VBox/CC/GC" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 34.0
margin_right = 47.0
margin_bottom = 38.0

[connection signal="item_selected" from="MarginContainer/SidePanelControl/MarginContainer/ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="confirmed" from="CanvasLayer/PopUpControl/AcceptDialog" to="." method="_on_AcceptDialog_confirmed"]
